# polymer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: buildAndTest.yml  codeql.yml
cmake/: AddPluto.cmake  BuildISL.cmake  PLUTO.cmake
example/polybench/: eval-perf  failed-run.txt  sanity-check  small-extracted-run-no-opt.txt  small-extracted-run-tile-par-diamond.txt  small-extracted-run-tile-par.txt  small-extracted-run-tile.txt
example/polybench/split-and-merge/: eval-split  eval-split-c  eval-split-mlir  eval-split-mlir-heuristic  eval-split-mlir-perf  perf_count.txt
include/polymer/: EmitOpenSCoP.h  EmitOpenScop.h  OslScop.h
include/polymer/Support/: ClastTransform.h  OslScop.h  OslScopBuilder.h  ScatTree.h  (+3 more)
lib/: CMakeLists.txt
lib/EmitOpenSCoP/: CMakeLists.txt  EmitOpenSCoP.cc
lib/EmitOpenScop/: EmitOpenScop.cc  OslScop.cc
lib/Support/: CMakeLists.txt  ClastTransform.cc  OslScop.cc  OslScopBuilder.cc  OslSymbolTable.cc  ScatTree.cc  ScatUtils.cc  ScopStmt.cc
lib/Transforms/: CMakeLists.txt  ExtractScopStmt.cc  InvariantScopTransform.cc  PlutoTransform.cc  Reg2Mem.cc  ScopStmtOpt.cc
test/: CMakeLists.txt  affine.mlir
test/Support/: test-scat-tree.mlir
test/emit-openscop/: load-store-if.mlir  load-store-local-vars.mlir  load-store-param-imperfect.mlir  load-store-param.mlir  load-store.mlir
test/integration/: CMakeLists.txt
test/integration/load-store-2d/: main  main.c  main.ll  main.mlir  main_llvm.mlir  main_mlir.bc  main_mlir.ll  result.bc  run.sh
test/integration/matmul/: CMakeLists.txt  matmul.c  matmul.mlir
test/integration/utils/: polybench.c
test/unittest/: lit.site.cfg.py.in
tools/emit-openscop/: CMakeLists.txt  emit-openscop.cc
tools/polymer-opt/: CMakeLists.txt  polymer-opt.cc
tools/polymer-translate/: CMakeLists.txt  polymer-translate.cc
(+104 files in other folders)
